--- a/main.html
+++ b/main.html
@@ -7,9 +7,8 @@
 </head>
 
 <body>
-	const status = document.getElementById("status");
-    const enterBtn = document.getElementById("enterBtn");
-
+	<p id="status">Enter the Metaverse</p>
+    <button id="enterBtn">Enter</button>
 
 	
 	<!-- the entire body must be written by student -->
