--- a/main.html
+++ b/main.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<p id="status">Enter the Metaverse</p>
-	<h1></h1>
+    <h1 id="mainTitle">
+        <p id="status">Enter the Metaverse</p>
+    </h1>
     <button id="enterBtn">Enter</button>
 
-	
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <!-- Include your JavaScript file -->
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
